--- a/client-ui/pom.xml
+++ b/client-ui/pom.xml
@@ -18,19 +18,26 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <spring.thymeleaf.version>3.2.3</spring.thymeleaf.version>
-        <spring.boot.web>3.2.2</spring.boot.web>
+        <spring.boot.web.version>3.2.2</spring.boot.web.version>
+        <spring.boot.devtools.version>3.2.3</spring.boot.devtools.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring.boot.web}</version>
+            <version>${spring.boot.web.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
             <version>${spring.thymeleaf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>${spring.boot.devtools.version}</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
