--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,6 +13,7 @@
     <properties>
         <commons.io.version>2.11.0</commons.io.version>
         <guava.version>33.0.0-jre</guava.version>
+        <commons.validator.version>1.7</commons.validator.version>
     </properties>
 
     <dependencies>
@@ -23,6 +24,12 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>${commons.validator.version}</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
